fix overflow

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -27,3 +27,6 @@
 .secondary-font {
   font-family: "Actor";
 }
+body {
+  overflow-x: hidden;
+}
